miniextendr-macros/tests/ui/module_unknown_keyword.stderr
error: expected one of: `mod`, `use`, `struct`, `impl`, `fn`, `extern`, identifier
 --> tests/ui/module_unknown_keyword.rs:7:5
  |
7 |     trait Foo;
  |     ^^^^^
